# beatbuddy

./: .gitignore  README.md  project_state.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/implementing-user-story/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/project-setup/: SKILL.md
.codex/skills/implementing-user-story/: SKILL.md
.codex/skills/project-plan/: SKILL.md
.cursor/skills/code-review/: SKILL.md
.cursor/skills/plan-review/: SKILL.md
.cursor/skills/update-documentation/: SKILL.md
docs/: prd.md  user_stories.json
docs/plans/: README.md  US-001-настройка-параметров.md  US-003-keyboard-sensor.md  US-004-microphone-sensor.md  US-005-анализ-точности.md  US-006-vizualnaya-obratnaya-svyaz.md  US-007-stats-screen.md  US-008-upravlenie-zanyatiem.md  US-009-зоны-точности.md  US-010-redesign-ui.md  US-011-интеграция-pixijs.md  US-012-location-system.md  US-013-лес.md  US-015-runner-sprites.md  US-016-runner-bez-prepyatstviy.md  US-018-repliki-dinozavra.md  US-019-edge-vspyshki.md  runner-location.md
docs/reviews/: US-004-code-review.md  US-004-plan-review.md  US-009-code-review.md  US-009-plan-review.md  US-010-code-review.md  US-010-plan-review.md  US-011-code-review.md  US-011-plan-review.md  US-012-code-review.md  US-012-plan-review.md  US-013-plan-review.md  US-015-code-review.md  US-015-plan-review.md  US-017-code-review.md  US-018-code-review.md  US-019-code-review.md  US-019-plan-review.md
src/project_name/: __init__.py  main.py
src/web/: README.md  index.html
src/web/js/: Animator.js  DinoPhrases.js  GamePhrases.js  (+5 more)
(+9 files in other folders)
